# RapidOCR

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  FAQ.md  LICENSE  Makefile  README-CN.md  README.md  README_CN.md  README_en.md  RapidOCRDemo.ipynb  change_log.md  cliff.toml  convert.sh  dir.md  readme.md  readme_cn.md
cpp/BaiPiaoOcrOnnx/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  generate-vs-project.bat  run-benchmark.bat  run-benchmark.sh  run-test.bat  run-test.sh  valgrind-memcheck.sh
cpp/BaiPiaoOcrOnnx/benchmark/: benchmark.cpp
cpp/BaiPiaoOcrOnnx/include/: AngleNet.h  DbNet.h  OcrUtils.h  main.h  version.h
cpp/BaiPiaoOcrOnnx/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteJni.cpp  OcrUtils.cpp  main.cpp
python/: README.md  bpocr.py  config.yaml  demo.py  demo2.py  demo_ch.py  demo_ort.py  deploy.bat  my_demo.py  pyproject.toml  rapidOCR.py  rapidOCR.sh  rapid_ocr_api.py  readme.md  requirements.txt  requirements_dml.txt  requirements_ort.txt  requirements_paddle.txt  requirements_torch.txt  requirements_vino.txt  setup.py  setup_dml.py  setup_onnxruntime.py  setup_openvino.py  setup_paddle.py  setup_torch.py  test.py  test_demo.py  test_demo.sh
python/ch_ppocr_mobile_v1.1_det/: demo.py  requirements.txt
python/ch_ppocr_mobile_v1.1_det/text_detect/: __init__.py  text_detect.py
python/ch_ppocr_mobile_v1.1_det/whl/: text_detect-1.0.0-py3-none-any.whl
python/ch_ppocr_mobile_v1_det/: __init__.py  text_detect.py  utils.py
python/ch_ppocr_mobile_v2_cls/: __init__.py  text_cls.py  utils.py
python/ch_ppocr_mobile_v2_det/: text_detect.py
python/ch_ppocr_mobile_v2_det_train/: __init__.py  text_detect.py
python/ch_ppocr_mobile_v2_rec/: text_recognize.py  utils.py
python/ch_ppocr_server_v2_det/: text_detect.py  utils.py
python/ch_ppocr_server_v2_rec/: __init__.py  run.sh  text_recognize.py  utils.py
python/en_number_ppocr_mobile_v2_rec/: text_recognize.py
python/japan_ppocr_mobile_v2_rec/: __init__.py  text_recognize.py  utils.py
python/onnxruntime_infer/: README.md  rapid_ocr_api.py  requirements.txt  test_demo.py
python/onnxruntime_infer/ch_ppocr_mobile_v2_cls/: run.sh  text_cls.py
python/onnxruntime_infer/ch_ppocr_mobile_v2_rec/: text_recognize.py  utils.py
python/onnxruntime_infer/ch_ppocr_mobile_v3_rec/: text_recognize.py  utils.py
python/onnxruntime_infer/ch_ppocr_server_v2_det/: run.sh  text_detect.py
python/onnxruntime_infer/ch_ppocr_server_v2_rec/: text_recognize.py  utils.py
python/openvino_infer/: README.md  rapid_ocr_api.py  requirements.txt  test_demo.py  test_openvino.py
python/openvino_infer/ch_ppocr_mobile_v2_cls/: text_cls.py  utils.py
python/openvino_infer/ch_ppocr_mobile_v2_det/: text_detect.py
python/openvino_infer/ch_ppocr_mobile_v2_det_openvino_ir/: text_detect.py  utils.py
python/openvino_infer/ch_ppocr_mobile_v2_det_openvino_onnx/: text_detect.py
python/openvino_infer/ch_ppocr_mobile_v2_det_openvino_paddle/: run.sh
python/openvino_infer/ch_ppocr_mobile_v2_rec/: text_recognize.py
python/rapid_structure/: README.md  demo.py  requirements.txt  setup_layout.py  setup_orientation.py  setup_table.py
python/rapid_structure/docs/: README_Layout.md  README_Orientation.md  README_Table.md
python/rapid_structure/rapid_layout/: __init__.py  config.yaml  rapid_layout.py  utils.py
python/rapid_structure/rapid_orientation/: __init__.py  config.yaml  rapid_orientation.py  utils.py
python/rapid_structure/rapid_table/: __init__.py  rapid_table.py
python/rapid_structure/tests/: test_layout.py  test_orientation.py  test_table.py
python/rapidocr/: __init__.py  __init__.pyi  cli.py  config.yaml  default_models.yaml  main.py
python/rapidocr/cal_rec_boxes/: __init__.py  main.py
python/rapidocr/ch_ppocr_cls/: __init__.py  main.py  text_cls.py  utils.py
python/rapidocr/ch_ppocr_det/: __init__.py  main.py  text_detect.py  utils.py
python/rapidocr/ch_ppocr_rec/: __init__.py  main.py  typings.py  utils.py
python/rapidocr/inference_engine/: MODEL_URL.yaml  __init__.py  base.py  mnn.py  onnxruntime.py  openvino.py  paddle.py  paddlepaddle.py  torch.py
python/rapidocr/networks/: arch_config.yaml
python/rapidocr/utils/: __init__.py  download_file.py  download_models.py  infer_engine.py  load_image.py  log.py  logger.py  model_resolver.py  output.py  parse_parameters.py  process_img.py  recon2md.py  to_json.py  to_markdown.py  typings.py  utils.py  vis_res.py
python/rapidocr_ncnn/: config.yaml  main.py  utils.py
python/rapidocr_ncnn/ch_ppocr_v2_cls/: text_cls.py
python/rapidocr_ncnn/ch_ppocr_v3_det/: config.yaml  text_detect.py  utils.py
python/rapidocr_ncnn/ch_ppocr_v3_rec/: config.yaml  text_recognize.py  utils.py
python/rapidocr_onnxruntime/: __init__.py  config.yaml  main.py  rapid_ocr_api.py  readme.md  test_demo.py  utils.py
python/rapidocr_onnxruntime/cal_rec_boxes/: main.py
python/rapidocr_onnxruntime/ch_ppocr_cls/: utils.py
python/rapidocr_onnxruntime/ch_ppocr_det/: text_detect.py  utils.py
python/rapidocr_onnxruntime/ch_ppocr_rec/: main.py  text_recognize.py  utils.py
python/rapidocr_onnxruntime/ch_ppocr_v2_cls/: __init__.py  config.yaml  text_cls.py  utils.py
python/rapidocr_openvino/: README.md  __init__.py  config.yaml  main.py  rapid_ocr_api.py  utils.py
python/rapidocr_paddle/: config.yaml  main.py  utils.py
python/rapidocr_torch/: __init__.py  arch_config.yaml  config.yaml  main.py
python/resources/: config.yaml
python/tests/: base.py  base_module.py  test_all_ort.py  test_all_vino.py  test_cli.py  test_cls.py  test_default_config.py  test_det.py  test_det_cls_rec.py  test_dml.py  test_engine.py  test_engine_config.py  test_image_preprocessing.py  test_input.py  test_main.py  test_model_resolver.py  test_ort.py  test_paddle.py  test_prepare_wheel_assets.py  test_rec.py  test_rec_language.py  test_rec_v2.py  test_rec_v3.py  test_release.py  test_return_word.py  test_tensorrt.py  test_to_other_format.py  test_torch.py  test_vino.py  test_vis.py
python/tools/: prepare_wheel_assets.py
(+441 files in other folders)
