[build-system]
requires = [
    "setuptools>=77",
    "wheel",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "rapidocr"
dynamic = ["version", "dependencies"]
description = "Awesome OCR Library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<4"
license = "Apache-2.0"
authors = [
    { name = "SWHL", email = "liekkaskono@163.com" },
]
keywords = [
    "ocr",
    "text_detection",
    "text_recognition",
    "db",
    "onnxruntime",
    "paddleocr",
    "openvino",
    "rapidocr",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Documentation = "https://rapidai.github.io/RapidOCRDocs"
Changelog = "https://github.com/RapidAI/RapidOCR/releases"

[project.scripts]
rapidocr = "rapidocr.main:main"

[tool.setuptools]
include-package-data = true
platforms = ["Any"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["rapidocr*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
rapidocr = [
    "**/*.yaml",
]

[tool.setuptools_scm]
root = ".."
tag_regex = "^v?(?P<version>[0-9]+(?:\\.[0-9]+)*.*)$"
version_file = "rapidocr/_version.py"
local_scheme = "no-local-version"
